fixed alignment of browser download buttons

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,19 +1,230 @@
-$navbar-light-toggler-border-color: #ffffff00;
-
+// CUSTOM VARIABLES
+// we import them first, because Bootstrap set their own only by default, in case there are no values already set
+$primary: #5265e1;
+$secondary: #fa5959;
+$font-family-sans-serif: "Roboto Flex", sans-serif;
+$accordion-button-active-bg: #fff;
+$accordion-button-color: $primary;
+// IMPORT ALL ORIGINAL BOOTSTRAP
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-.login-btn,
-.nav-item {
-  font-weight: 500;
-  letter-spacing: 3px;
+h1,
+h2,
+h3 {
+  font-weight: 700;
 }
 
-.login-btn {
-  font-size: small;
-  padding-left: 30px;
-  padding-right: 30px;
+// NAV-BAR MENU TEXT
+.navbar .navbar-nav {
+  font-size: 0.9em;
+  letter-spacing: 0.09em;
 }
 
-.nav-item {
-    font-size: smaller;
+// BLUE IMAGES BEHIND PICTURES
+.image-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.blue-image {
+  position: absolute;
+  z-index: -1;
+  width: 90%;
+  aspect-ratio: 2/1;
+  padding-bottom: 2rem;
+}
+
+.blue-image__right {
+  translate: -70% 45%;
+}
+
+.blue-image__left {
+  translate: -130% 45%;
+}
+
+// BUTTONS MAIN SECTION
+
+.btn-downloads {
+  font-weight: bold;
+}
+
+.btn-header {
+  height: 3.5em;
+  font-weight: bold;
+  font-size: 0.9em;
+  letter-spacing: 0.05em;
+  text-align: center;
+}
+
+// FEATURES-SECTION NAV-BAR
+ul.nav-tabs {
+  border-bottom: 1px solid #cccccc;
+  align-items: center;
+}
+
+ul.nav-tabs li {
+  border-top: 1px solid #cccccc;
+}
+
+.features-nav .nav-item .nav-link {
+  letter-spacing: 0.05em;
+}
+
+.features-nav .nav-item .nav-link.active {
+  border-bottom: 5px solid #fa5959;
+  border-right: 0;
+  border-left: 0;
+  border-top: 0;
+  align-items: center;
+  color: #363948;
+  font-weight: bold;
+}
+
+@media (min-width: 768px) {
+  ul.nav-tabs {
+    border-bottom: 1px solid #cccccc;
+  }
+
+  ul.nav-tabs li {
+    border-top: 0;
+  }
+}
+
+// DOWNLOAD SECTION
+//BROWSER CARDS
+.browser-cards .card-text {
+  border-bottom: 5px dotted grey;
+}
+
+.card-body.shadow {
+  border-radius: 10%;
+}
+
+.card-1,
+.card-2,
+.card-3 {
+  border: 10px solid white;
+}
+
+//CARD TRANSLATION Y-AXIS - N-CHILD EXERCISE
+@media (min-width: 768px) {
+  .browser-cards .row > :nth-child(2) {
+    transform: translate(0, 2rem);
+  }
+
+  .browser-cards .row > :nth-child(3) {
+    transform: translate(0, 4rem);
+  }
+}
+
+// FAQs SECTION
+.accordion button {
+  font-weight: bold;
+}
+
+.accordion .accordion-button:not(.collapsed) {
+  outline: 5px solid white;
+}
+
+.accordion .accordion-button-text {
+  color: black;
+}
+
+button.accordion-button:not(.collapsed)::after {
+  background-image: url(../assets/icon-arrow.svg);
+  filter: invert(62%) sepia(79%) saturate(4605%) hue-rotate(326deg)
+    brightness(99%) contrast(96%);
+}
+
+// FOOTER
+.footer-navbar {
+  background-color: #242946;
+}
+
+.footer-navbar li a {
+  color: #fff;
+  align-items: flex-start;
+  font-size: 0.9em;
+  letter-spacing: 0.15em;
+}
+
+.footer-p {
+  font-size: 0.85em;
+  letter-spacing: 0.35em;
+}
+
+.form-field-email,
+.footer-button {
+  height: 2.5rem;
+  width: 15rem;
+  margin: 0 auto;
+}
+
+.invalid-feedback {
+  position: relative;
+  top: -5px;
+  width: 15rem;
+  margin: 0 auto;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding-left: 2px;
+  font-style: italic;
+}
+
+// ACTIVE STATE ON HOVER FOR BUTTONS, TABS & ICONS
+.navbar .nav-link:hover {
+  color: $secondary;
+}
+
+.navbar .btn-secondary:hover {
+  color: $secondary !important;
+  background-color: #fff;
+  border: 1px solid $secondary;
+  font-weight: 700;
+}
+
+.bookmark-section .btn-primary:hover {
+  color: $primary;
+  background-color: #fff;
+  border: 2px solid $primary;
+}
+
+.bookmark-section .btn-light:hover {
+  color: $gray-700;
+  background-color: #fff;
+  border: 2px solid $gray-700;
+}
+
+.features-nav button:hover {
+  border: 0 !important;
+  color: $secondary !important;
+  font-weight: 700;
+}
+
+.btn-downloads:hover {
+  color: $primary;
+  background-color: #fff;
+  border: 2px solid $primary;
+}
+
+.faqs .accordion-button-text:hover {
+  color: $secondary !important;
+  background-color: #fff;
+  font-weight: 700;
+}
+
+.footer-button:hover {
+  color: $secondary !important;
+  background-color: #fff;
+  border: 1px solid $secondary;
+  font-weight: 700;
+}
+
+.footer-navbar .nav-link:hover {
+  color: $secondary !important;
+}
+
+.social-networks-icons:hover {
+  filter: invert(62%) sepia(79%) saturate(4605%) hue-rotate(326deg)
+    brightness(99%) contrast(96%);
 }
